Edit header bar in homepage

--- a/FE/home.html
+++ b/FE/home.html
@@ -175,8 +175,8 @@
 											<li><span><a href="#">Men</a></span>
 												<ul>
 													<li><a href="listing-grid-6-sidebar-left.html">Offers</a></li>
-													<li><a href="listing-grid-7-sidebar-right.html">Shoes</a></li>
-													<li><a href="listing-row-1-sidebar-left.html">Clothing</a></li>
+													<li><a href="listing-grid-7-sidebar-right.html"></a></li>
+													<li><a href="listing-row-1-sidebar-left.html"></a></li>
 													<li><a href="listing-row-3-sidebar-left.html">Accessories</a></li>
 													<li><a href="listing-row-4-sidebar-extended.html">Equipment</a></li>
 												</ul>
@@ -184,23 +184,23 @@
 											<li><span><a href="#">Women</a></span>
 												<ul>
 													<li><a href="listing-grid-1-full.html">Best Sellers</a></li>
-													<li><a href="listing-grid-2-full.html">Clothing</a></li>
+													<li><a href="listing-grid-2-full.html"></a></li>
 													<li><a href="listing-grid-3.html">Accessories</a></li>
-													<li><a href="listing-grid-4-sidebar-left.html">Shoes</a></li>
+													<li><a href="listing-grid-4-sidebar-left.html"></a></li>
 												</ul>
 											</li>
 											<li><span><a href="#">Boys</a></span>
 												<ul>
-													<li><a href="listing-grid-6-sidebar-left.html">Easy On Shoes</a></li>
-													<li><a href="listing-grid-7-sidebar-right.html">Clothing</a></li>
+													<li><a href="listing-grid-6-sidebar-left.html"></a></li>
+													<li><a href="listing-grid-7-sidebar-right.html"></a></li>
 													<li><a href="listing-row-3-sidebar-left.html">Must Have</a></li>
-													<li><a href="listing-row-4-sidebar-extended.html">All Boys</a></li>
+													<li><a href="listing-row-4-sidebar-extended.html"> </a></li>
 												</ul>
 											</li>
 											<li><span><a href="#">Girls</a></span>
 												<ul>
 													<li><a href="listing-grid-1-full.html">New Releases</a></li>
-													<li><a href="listing-grid-2-full.html">Clothing</a></li>
+													<li><a href="listing-grid-2-full.html"></a></li>
 													<li><a href="listing-grid-3.html">Sale</a></li>
 													<li><a href="listing-grid-4-sidebar-left.html">Best Sellers</a></li>
 												</ul>
@@ -235,14 +235,14 @@
 											<li>
 												<a href="product-detail-1.html">
 													<figure><img src="img/products/product_placeholder_square_small.jpg" data-src="img/products/shoes/thumb/1.jpg" alt="" width="50" height="50" class="lazy"></figure>
-													<strong><span>1x Armor Air x Fear</span>$90.00</strong>
+													<strong><span></span>$90.00</strong>
 												</a>
 												<a href="#0" class="action"><i class="ti-trash"></i></a>
 											</li>
 											<li>
 												<a href="product-detail-1.html">
 													<figure><img src="img/products/product_placeholder_square_small.jpg" data-src="img/products/shoes/thumb/2.jpg" alt="" width="50" height="50" class="lazy"></figure>
-													<strong><span>1x Armor Okwahn II</span>$110.00</strong>
+													<strong><span></span>$110.00</strong>
 												</a>
 												<a href="0" class="action"><i class="ti-trash"></i></a>
 											</li>
